Fix deprecation warnings
git-svn-id: https://svn.code.sf.net/p/plexil/code/branches/plexil-x@5252 d2be67b0-814c-0410-949f-d215b6b29573